--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -5,7 +5,9 @@
 <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/home/top.scss">
 <body>
 <header>
-<a href="about.html.erb" class="aboutLink" ><span>アプリについて</span></a>
+  <div class="header-right buttons">
+    <a href="about.html.erb" class="aboutLink"><span>アプリについて</span></a>
+  </div>
 </header>
 
 <div class="top">
