--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
+<head>
+  <title>Amica</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-<%= javascript_pack_tag 'home/index' %>
-<link rel="stylesheet" type="text/css" href="app/assets/stylesheets/home/top.scss">
+  <%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
+  <%= javascript_pack_tag 'home/index' %>
+</head>
+
 <body>
-<header>
-<a href="about.html.erb" class="aboutLink" ><span>アプリについて</span></a>
-</header>
 
 <div class="top">
   <div class="title">
