n1200245さんが変更

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :userid %><br />
+    <%= f.label "ユーザーID" %><br />
     <%= f.text_field :userid %>
   </div>
 
