--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,13 +1,62 @@
-<h1>home#about</h1>
+<!DOCTYPE html>
+<html lang="ja">
 
-<div>
-  <p class="Avails">Avails<br></p><p>2T1グループ１</p>
-  <div class = "members">
-    <span class="usui">05 薄井大樹</span>
-    <span class="utsunomiya">06 宇津宮一歩</span>
-    <span class="endo">08 遠藤桂樹</span><br>
-    <span class="kubo"> 17 久保聖人</span>
-    <span class="suyaryu">29 須山龍</span>
-    <span class="tomosugi">38 友杉颯太</span>
+  <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/home/about.scss">
+  <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/home/top.scss">
+
+<body>
+  <header>
+    <div class="header">
+    <a href="/" class="Link">TOP画面</a>
   </div>
-</div>
+  </header>
+
+  <section>
+    <span class="big">このアプリについて</span>
+    <div class="medium">
+      <p>本アプリは<u>岩崎学園情報科学専門学校生に向けたアプリ</u>です。<br>
+        タグや呟きを元に検索を行い趣味の合う人を探してチャットを行ったり、実際に学校で話しかける<u>きっかけを探す手助け</u>をします。<br>
+        後なんか思いついたやつ
+      </p>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <span class="big">注意</span>
+      <p class="medium">
+        AMICAは以下の事項<strong>固く禁止</strong>します。<br>
+      <ul class="medium">
+        <li>本アプリ内の個人情報の漏洩</li>
+        <li>他人を傷つけるコメント、不快なコメント等のマナーのないコメント</li>
+        <li>後なんか思いついたやつ</li>
+      </ul>
+
+      </p>
+    </div>
+  </section>
+
+  <section>
+    <span class="big">クレジット</span>
+    <div class="medium">
+        <span class="Avails">Avails<br></span>
+        <span>2T1グループ１</span>
+        <div class="members">
+          <span class="usui">05 薄井大樹</span>
+          <span class="utsunomiya">06 宇津宮一歩</span>
+          <span class="endo">08 遠藤桂樹</span><br>
+          <span class="kubo"> 17 久保聖人</span>
+          <span class="suyaryu">29 須山龍</span>
+          <span class="tomosugi">38 友杉颯太</span>
+        </div>
+      </div>
+  </section>
+
+
+
+  <footer>
+
+  </footer>
+</body>
+
+</html>
