--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -5,8 +5,9 @@
 <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/home/top.scss">
 <body>
 <header>
-  <div class="header-right buttons">
-    <a href="about.html.erb" class="aboutLink"><span>アプリについて</span></a>
+  <div class="header buttons">
+    <a href="/about" class="Link"><span>アプリについて</span></a>
+    <a href="/contact" class="Link"><span>contact</span></a>
   </div>
 </header>
 
