--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -6,7 +6,7 @@
   <%= csp_meta_tag %>
   <title>Amica</title>
 
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,8 +16,10 @@
 
 <body>
 <header>
-
-
+  <div class="header buttons">
+    <a href="/about" class="Link"><span>アプリについて</span></a>
+    <a href="/contact" class="Link"><span>contact</span></a>
+  </div>
 </header>
 <%= yield %>
 </body>
