--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,7 +2,8 @@
 <html lang="ja">
 
 <%= javascript_pack_tag 'home/index' %>
-<link rel="stylesheet" type="text/css" href="app/assets/stylesheets/top.scss">
+<!---<link rel="stylesheet" type="text/css" href="app/assets/stylesheets/top.scss">--->
+<%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
 <body>
 
 
