新規登録フォームの作業分

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -66,9 +66,7 @@ html {
   font-size: 62.5%;
 }
 
-.btn,
-a.btn,
-button.btn {
+.btn{
   font-size: 1.6rem;
   font-weight: 700;
   line-height: 1.5;
