--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -5,7 +5,7 @@
 
 
 
-img {
+.title_icon{
   max-width: 100%;
   max-height: 100%;
   border-radius: 50px;
@@ -82,4 +82,8 @@ a.btn--orange {
 a.btn--orange:hover {
   color: #fff;
   background: #f56500;
+}
+
+.header_icon{
+  display: none;
 }
