--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns="http://www.w3.org/1999/html">
 <%= stylesheet_link_tag 'about', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'contacts', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <body>
 
 <%= flash.now[:notice] %>
-
+<!--- この辺にログインの認証 --->
 <header>
 
 </header>
 
-<section>
+<section class="ask">
   <span class="big">お問い合わせ</span>
-  <form method="POST" action="avails2022@gmail.com" enctype="text/plain">
-    Email　　　　<input type="email" size="30"><br>
-    問い合わせ内容<input type="text-box" size="100" rows="5"><br>
+  <div class="medium">
+    <form method="POST" action="avails2022@gmail.com" enctype="text/plain">
+      名前<input type="name" name="name" size="30%" >
+      Email<input type="email" name="email_add" size="30%" ><br>
+      問い合わせ内容<br><textarea name="inquiry" placeholder="こちらにお問い合わせ内容を入力してください。"></textarea><br>
 
-    <input type="submit" value="送信"><input type="reset" value="クリア">
-  </form>
+      <input type="submit" value="送信"><input type="reset" value="クリア">
+    </form>
+  </div>
 </section>
 
 </body>
