--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -7,10 +7,11 @@
 <body>
 
 
+
 <div class="top">
   <div class="title">
     <div class="title-image">
-          <%= image_tag("top_icon.png") %>
+          <%= image_tag "top_icon.png", alt: "title_icon", class: "title_icon" %>
     </div>
     <div class="title-text">
       <p>Amicaはあなたの生活に<u>新たな出会いををプラス</u>する</p>
