--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -17,12 +17,14 @@
 
 <body>
 <header>
+
   <div class="header buttons">
     <a href="/" class="Link"><span>TOP</span></a>
     <a href="/about" class="Link"><span>アプリについて</span></a>
     <a href="/contact" class="Link"><span>contact</span></a>
   </div>
 </header>
+<a href="/"><%= image_tag "header_icon.png", alt: "header_icon", class: "header_icon" %></a>
 <%= yield %>
 </body>
 
