--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -14,59 +14,57 @@ html{
   margin: 100px;
 }
 
-  /*Don't forget to add Font Awesome CSS : "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"*/
-  .input{
-    width: 100%;
-    border: 2px solid #aaa;
-    border-radius: 4px;
-    margin: 8px 0;
-    outline: none;
-    padding: 8px;
-    box-sizing: border-box;
-    transition: 0.3s;
-  }
+/*Don't forget to add Font Awesome CSS : "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"*/
+.input{
+  width: 100%;
+  border: 2px solid #aaa;
+  border-radius: 4px;
+  margin: 8px 0;
+  outline: none;
+  padding: 8px;
+  box-sizing: border-box;
+  transition: 0.3s;
+}
 
 .input:focus {
   border-color: dodgerBlue;
   box-shadow: 0 0 8px 0 dodgerBlue;
 }
 
-  .inputWithIcon .input{
-    padding-left: 40px;
-  }
+.inputWithIcon .input{
+  padding-left: 40px;
+}
 
-  .inputWithIcon {
-    position: relative;
-  }
+.inputWithIcon {
+  position: relative;
+}
 
-  .inputWithIcon i {
-    position: absolute;
-    left: 0;
-    top: 8px;
-    padding: 9px 8px;
-    color: #aaa;
-    transition: 0.3s;
-  }
+.inputWithIcon i {
+  position: absolute;
+  left: 0;
+  top: 8px;
+  padding: 9px 8px;
+  color: #aaa;
+  transition: 0.3s;
+}
 
-  .inputWithIcon .input:focus + i {
-    color: dodgerBlue;
-  }
+.inputWithIcon .input:focus + i {
+  color: dodgerBlue;
+}
 
-  .inputWithIcon.inputIconBg i {
-    background-color: #aaa;
-    color: #fff;
-    padding: 9px 4px;
-    border-radius: 4px 0 0 4px;
-  }
+.inputWithIcon.inputIconBg i {
+  background-color: #aaa;
+  color: #fff;
+  padding: 9px 4px;
+  border-radius: 4px 0 0 4px;
+}
 
-  .inputWithIcon.inputIconBg .input:focus + i {
-    color: #fff;
-    background-color: dodgerBlue;
-  }
+.inputWithIcon.inputIconBg .input:focus + i {
+  color: #fff;
+  background-color: dodgerBlue;
+}
 
 .button01 .submit_button {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
   margin: 0 auto;
   padding: 1em 2em;
@@ -90,6 +88,10 @@ html{
 .button01 .submit_button:hover {
   text-decoration: none;
   background-color: #bbbbbb;
+}
+
+.rememberCheckBox{
+  margin: 40px 0;
 }
 
 .links{
