ヘッダーの変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,13 @@
  *= require_self
  */
 
+header{
+  background-color: #037394;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+  color: #F7F7F7;
+}
+
