ヘッダー仮組み

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@ html{
   font-family: 'Kiwi Maru', serif;
 }
 
-header{
+header {
   background-color: #037394;
   width: 100%;
   height: auto;
@@ -27,3 +27,4 @@ header{
   top: 0;
   left: 0;
   text-align: right;
+}
