--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,11 @@ html{
   font-family: 'Kiwi Maru', serif;
 }
 
+body{
+  margin: 0;
+}
+
+
 header {
   background-color: #037394;
   width: 100%;
@@ -26,5 +31,35 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  text-align: right;
+  font-size: 3rem;
+}
+
+.container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.icons{
+}
+
+.icon{
+  width: 50px;
+}
+
+.link{
+  text-align: center;
+  font-size: 20px;
+  color: #F7F7F7;
+  text-decoration: none;
+}
+
+.link:hover{
+  color: #4cbdbd;
+}
+
+.default_icon{
+  background-color: #F7F7F7;
+  width: 50px;
+  border-radius: 50%;
+  border:solid 1px black;
 }
