--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Chats#index</h1>
-<p>Find me in app/views/chats/index.html.erb</p>
+<h1>コチャ♡</h1>
+<p>うるせぇ～～～～！！！！！</p>
+<p>しらねぇ～～～～～～～！！！！！</p>
+<p>FinalFant</p>
+<p>asy</p>
