--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -29,11 +29,11 @@
 <% else %>
   <% unless current_user.following?(@user) %>
     <div class="actions">
-      <%= link_to 'Request to be mate', profile_relationships_path(@user.id), method: :post, class:"sign-up-btn" %>
+      <%= link_to 'Request to be mate', profile_relationships_path(@user), method: :post, class:"sign-up-btn" %>
     </div>
   <% else %>
     <div class="actions">
-      <%= link_to 'Cancel to your request', profile_relationship_path(@user.id), method: :delete, class:"sign-up-btn" %>
+      <%= link_to 'Cancel to your request', profile_relationship_path(@user), method: :delete, class:"sign-up-btn" %>
     </div>
   <% end %>
 <% end %>
