--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,20 @@
-<h1>ようこそ</h1>
+<%= stylesheet_link_tag 'pages', media: 'all', 'data-turbolinks-track': 'reload' %>
+<article xmlns="http://www.w3.org/1999/html">
+  <div class="side">
+    <p><link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-<p>トップページです。</p>
+    <form method="get" action="#" class="search_container">
+      <input type="text" size="30" placeholder="キーワード検索">
+      <input type="submit" value="&#xf002"></p>
+    </form>
+  </div>
+  <div class="content">
+    <p>メインコンテンツ</p>
+  </div>
+</article>
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+<form method="get" action="#" class="search_container">
+  <input type="text" size="25" placeholder="キーワード検索">
+  <input type="submit" value="&#xf002">
+</form>
