--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,4 +1,7 @@
 <h1>コミュニティ</h1>
 <p>
-<%= link_to "新規作成","new_community"%>
+<%= link_to "コミュニティ新規作成","/communities/new"%>
+</p>
+<p>
+  コミュニティ一覧
 </p>
