--- a/app/assets/stylesheets/mypages.scss
+++ b/app/assets/stylesheets/mypages.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the mypages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.right{
+  text-align: right;
+}
