--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Mypages#index　　　</h1>
-<p>Find me in app/views/mypages/index.html.erb</p>
+
+<h1>マイページ</h1>
+<p>icon
+  <%= current_user.nickname %>
+  <%= current_user.userid%>
+
+  <%= form_for(@users, url: mypages_path) do |f|%>
+    <%= f.label "自己紹介" %>
+    <%= f.text_area :message %>
+    <%= f.label "タグ・趣味" %>
+    <%= f.text_area :message %>
+  <% end %>
+</p>
