db作成 投稿画面

--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,2 +1,30 @@
 <h1>タイムライン</h1>
-<p>Find me in app/views/timelines/index.html.erb</p>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>TweetApp</title>
+  <%= csrf_meta_tags %>
+
+
+
+</head>
+
+<body>
+
+
+  <ul class="header-menus">
+
+    <li>
+      <%= link_to("投稿一覧", "/timelines/index") %>
+    </li>
+    <li>
+      <%= link_to("新規投稿", "/timelines/new") %>
+    </li>
+  </ul>
+
+  </div>
+  </div>
+
+</body>
+</html>
