--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,7 +7,9 @@
       <input type="text" size="30" placeholder="名前で検索">
       <input type="submit" value="&#xf002"></p>
     </form>
-    <p><img src="/assets/top_icon.png" alt="［写真］" class="example1"></p>
+    <p class="profile"><img src="/assets/top_icon.png" alt="［写真］" class="example1">
+      <span>　友杉　颯太 (ニックネーム)</span>
+    </p>
   </div>
 
   <div class="content">
