自分の名前表示(仮)

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,8 +7,10 @@
       <input type="text" size="30" placeholder="名前で検索">
       <input type="submit" value="&#xf002"></p>
     </form>
-    <p class="profile"><img src="/assets/top_icon.png" alt="［写真］" class="example1">
-      <span>　友杉　颯太 (ニックネーム)</span>
+    <p class="profile">
+      <%= image_tag 'top_icon.png',class:'example1' %>
+      <span>　友杉　颯太</span>
+        <span>(ニックネーム)</span>
     </p>
   </div>
 
