--- a/app/assets/stylesheets/mypages.scss
+++ b/app/assets/stylesheets/mypages.scss
@@ -6,16 +6,20 @@
 }
 body{
   font-size:30px;
+  top:-300px;
 }
 .right{
   position: relative;
-  /* 値は調整してください */
-  /* 値は調整してください */
-  top: 0px;
+  top:-200px;
   left: 150px;
+  font-size:50px;
 }
 .myicon{
   width: 150px;
   height: 150px;
 
+}
+.profile{
+  position: relative;
+  top:-180px;
 }
