--- a/app/assets/stylesheets/timelines.scss
+++ b/app/assets/stylesheets/timelines.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the timelines controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+div.activity {
+  padding: 0;
+  background: #ffffff;
+  overflow: hidden;
+  max-width: 700px;
+  margin: 20px auto;
+  font-size: 80%;
+  border: solid 1px #eeeeee;
+  height: 800px;
+  overflow-y: scroll;
+}
