--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -1,7 +1,47 @@
+<head>
+  <script type="text/javascript">
+      function CheckPassword(password){
+        <%= check %>
+      }
+  </script>
+</head>
+
+
+
 <h1>Mypages#index</h1>
 
-<%= form_tag(mypages_path, {multipart: true}) do %>
+<% if flash %>
+  <%=  flash[:notice] %>
+<% end %>
+
+<h2>名前</h2>
+<%= @user.name %><br>
+<h2>email</h2>
+<%= @user.email %><br>
+<h2>ニックネーム</h2>
+<%= @user.nickname %><br>
+<h2>id</h2>
+<%= @user.id %><br>
+
+
+<p>現在のアイコン</p>
+<% if @user.image? %>
+  <%= image_tag "/user_images/#{@user.image}"%>
+  user
+<% else %>
+  default
+  <%= image_tag "default_icon" %>
+<% end %>
+
+
+
+<%= form_tag("mypages/update", {multipart: true}) do %>
   <p>画像</p>
   <input name="image" type="file">
-  <input type="submit" value="保存">
+  <p>password</p>
+  <input type="password" name="password" require>
+  <input type="submit" value="保存" onclick="CheckPassword()">
+
 <% end %>
+
+
