アイコン変更機能の実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
             <%= link_to  timelines_path,class: "icons" do %>
               <i class="fas fa-clock"></i>
             <% end %>
-            <%= link_to  mypages_path(id:current_user.id) ,class: "icons" do %>
+            <%= link_to  mypages_path,class: "icons" do %>
               <i class="fas fa-address-card"></i>
             <% end %>
           </div>
