--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Chats#index</h1>
-<p>Find me in app/views/chats/index.html.erb</p>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>JavaScriptのFileAPIで画像のプレビュー</title>
+</head>
+<body>
+<form>
+  <input type="file" accept='image/*' onchange="previewImage(this);">
+</form>
+<p>
+  Preview:<br>
+  <img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" style="max-width:200px;">
+</p>
+<script>
+    function previewImage(obj)
+    {
+        var fileReader = new FileReader();
+        fileReader.onload = (function() {
+            document.getElementById('preview').src = fileReader.result;
+        });
+        fileReader.readAsDataURL(obj.files[0]);
+    }
+</script>
+</body>
+</html>
