マイページ第4回　.idea削除した

--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -26,9 +26,11 @@
 自己紹介<br>
   <%= f.text_area :introduction %><br>
 取得資格<br>
+  <%= f.text_area :introduction %><br>
 タグ、趣味<br>
+  <%= f.text_area :introduction %><br>
+  <%= f.submit '更新'%>
   </div>
 </p>
 </body>
-  <br><br><%= f.submit '更新'%>
 <%end %>
