--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -36,13 +36,8 @@
         <img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" style="max-width:200px;">
       </p>
 
-      <p>password</p>
-      <span class="password">
-      <input type="password" name="password"  placeholder="PASSWORD"  required>
-    <label>
-    <input type="submit" name="submit" value="保存"><i class="fas fa-upload"></i>
-    </label>
-      </span>
+    <input type="submit" name="submit" value="保存" class="btn btn--orange">
+
  <% end %>
   </div>
 </div>
