プロフィールを完成

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -27,7 +27,7 @@
               </div>
 
               <div class="item-content-right">
-                <p><%= link_to user.username, profile_path(user.userid) %></p>
+                <p><%= link_to user.nickname, profile_path(user.userid) %></p>
               </div>
 
             </div>
@@ -54,7 +54,7 @@
                     <!--ユーザー画像-->
                   </div>
                   <div class="item-content-right">
-                    <p><%= link_to user.username, profile_path(user.userid) %></p>
+                    <p><%= link_to user.nickname, profile_path(user.userid) %></p>
                     <% if user.follow_request?(current_user, user) %>
                       <p><i class="fas fa-star"></i></p>
                     <% end %>
