--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,26 +2,11 @@
   <div class="form-group">
     <div class="schedule-item">
       <div class="schedule-item-body text-left">
-        <h1><%= @user.username %></h1><p>@<%= @user.userid %></p>
+        <h1><%= @user.nickname %></h1><p>@<%= @user.userid %></p>
       </div>
     </div>
   </div>
 
-  <div class="form-group">
-    <div class="schedule-item">
-      <div class="schedule-item-body text-left">
-        <p>お気に入りの台 : <%= @user.favorite %></p>
-      </div>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="schedule-item">
-      <div class="schedule-item-body text-left">
-        <p>自己紹介 : <%= @user.about %></p>
-      </div>
-    </div>
-  </div>
 
   <div class="form-group">
     <div class="schedule-item">
