--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,10 +1,16 @@
+<%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
 <h1>コミュニティ</h1>
+<div class="btn-horizontal-border">
 <p>
 <%= link_to "コミュニティ新規作成","/communities/new"%>
 </p>
+</div>
 <p>
   コミュニティ一覧
 </p>
 <% @community.each do |community| %>
-  <%= community.name%> <%= community.content %><br>
-<% end %>
+  <div class="community">
+    <%= community.name%><br>
+  <%= community.content %><br>
+  </div>
+  <% end %>
